# tatry-weather

./: .gitignore  API .ipynb  EDA.ipynb  JSON API .ipynb  README.md  ai_risk.py  app.py  dashboard_utils.py  dashboard_views.py  pyproject.toml  spatial_config.py
.github/workflows/: refresh-data.yml
data/: station_daily.csv  weather_history.csv  weather_history_for_eda.csv
data/json/: 20260402_215939.json  20260403_233521.json  20260404_000536.json  20260407_000713.json  20260407_221615.json  20260408_220641.json  20260409_224320.json  20260410_214051.json  20260411_180127.json  20260411_192827.json  20260412_051743.json  20260419_052326.json  20260426_053330.json  20260503_055225.json
database/: weather.db
database/schema/: create_weather_history.sql
legacy_pages/: 0_Ocena_ryzyka.py  1_Dane_historyczne.py  2_Prognoza_pogody.py
notebooks/: AI_API.ipynb  API.ipynb  EDA.ipynb
pages/: 0_Ocena_ryzyka.py  1_Dane_historyczne.py  2_Prognoza_pogody.py  3_Eksport_danych.py
scripts/: api_refresh.py  cleanup_spatial_data.py  cleanup_sqlite_bounds.py  refresh_project.py  weather_db.py
