[project]
name = "tatry-weather"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "tqdm>=4.67.3",
]
